# edgepredict

./: .gitattributes  .gitignore  Link Prediction Demo Notebook.ipynb  README.md  pyproject.toml  requirements.txt
Models/: auc_label_encoder.pkl  auc_score_regressor.pkl  best_auc_model_classifier.pkl  best_topk_model_classifier.pkl  topk_label_encoder.pkl  topk_score_regressor.pkl
configs/: feature.yaml
example_networks/: norway_board.pkl  zachary_karate_club_net.pkl
examples/: predict_best_model.py  quickstart_gnn.py  quickstart_ml.py
link_prediction/: __init__.py
link_prediction/core/: __init__.py  dataset_preparer.py  trainer.py
link_prediction/features/: __init__.py  features.py
link_prediction/models/: __init__.py  gnn_models.py  gnn_trainer.py  ml_models.py
link_prediction/prediction/: __init__.py  graph_predictor.py
link_prediction/utils/: __init__.py  metrics.py  pair_dataset.py  utils.py
meta_learner_models/: downloader.py
notebooks/: demo.ipynb
src/linkpredx/: __init__.py  config.py  dataset_preparer.py  edge_sampler.py  features.py  features_light.py  generator.py  gnn_models.py  gnn_trainer.py  graph_predictor.py  graph_processor.py  logger.py  metrics.py  ml_models.py  pair_dataset.py  trainer.py  utils.py
tests/: test_dataset.py  test_gnn.py  test_graph_predictor.py
