# pyproject.toml
# Top-level build + metadata file (PEP 518 + PEP 621)

##############################
#  Build backend: Setuptools #
##############################
[build-system]
requires = ["setuptools>=69", "wheel"]   # tools needed at build-time
build-backend = "setuptools.build_meta"  # use classic Setuptools

#########################
#  Core project metadata#
#########################
[project]
name            = "graphintel"                   # `pip install graphintel`
version         = "0.0.1"                        # bump & tag later
description     = "GraphIntel: link-prediction toolkit"
readme          = "README.md"
requires-python = ">=3.9"
license         = {file = "LICENSE"}

authors = [
  {name = "Bisman Singh", email = "you@example.com"}
]

keywords = ["link prediction", "networkx", "topological features"]

###################
# Runtime deps    #
###################
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "scipy>=1.10",
  "imbalanced-learn>=0.11",
  "tqdm>=4.66"
]

#############################
# Optional extra groups     #
#############################
[project.optional-dependencies]
dev  = ["pytest", "black", "ruff", "pre-commit"]
docs = ["mkdocs-material"]

#####################################
# Tell Setuptools where code lives  #
#####################################
[tool.setuptools.packages.find]
where = ["src"]     # ← we’re using the “src/” layout
