[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkpredx"
version = "0.1.0"
description = "Unified link prediction toolkit (ML + GNN)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
requires-python = ">=3.9"
dependencies = ["numpy","pandas","scikit-learn","networkx","imbalanced-learn","torch","torch-geometric","torch-sparse","tqdm","pyyaml","joblib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
